fix(dark mode): fixed visual styling for a dark mode

--- a/FE/src/components/topbar/TopBar.css
+++ b/FE/src/components/topbar/TopBar.css
@@ -27,8 +27,10 @@ a {
 }
 
 a:hover {
-    background-color: rgba(46, 48, 38, 0.6);
-    color: #ffffff;
+    background-color: light-dark(rgba(46, 48, 38, 0.6), rgb(90, 88, 88));
+    color: light-dark(#ffffff, #ffffff)
+    /* background-color: rgba(46, 48, 38, 0.6);
+    color: #ffffff; */
 }
 
 a:focus,
